[package]
name = "skimple"
version = "2.0.0"
edition = "2024"
description = "A simple interface for the skim fuzzy-matcher"
documentation = "https://docs.rs/skimple"
homepage = "https://github.com/dotzenith/skimple"
repository = "https://github.com/dotzenith/skimple"
readme  = "README.md"
keywords = ["fuzzy", "match", "text", "search"]
license = "MIT"

[dependencies]
fuzzy-matcher = "0.3.7"
thiserror = "2.0.17"
